// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowTemplateForm should match snapshot 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-required"
          for="name"
          title="workflowTemplate.form.label.name"
        >
          workflowTemplate.form.label.name
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="name"
              placeholder="common.form.placeholder.input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="desc"
          title="workflowTemplate.form.label.desc"
        >
          workflowTemplate.form.label.desc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input textarea-no-resize"
              id="desc"
              placeholder="common.form.placeholder.input"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="instanceNameList"
          title="workflowTemplate.form.label.instanceNameList"
        >
          workflowTemplate.form.label.instanceNameList
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="instanceNameList_list_0"
                        aria-autocomplete="list"
                        aria-controls="instanceNameList_list"
                        aria-haspopup="listbox"
                        aria-owns="instanceNameList_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instanceNameList"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-no-colon"
          title=" "
        >
           
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    common.reset
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    common.nextStep
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`WorkflowTemplateForm should match snapshot 2`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-required"
          for="name"
          title="workflowTemplate.form.label.name"
        >
          workflowTemplate.form.label.name
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-disabled"
              disabled=""
              id="name"
              placeholder="common.form.placeholder.input"
              type="text"
              value="name1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="desc"
          title="workflowTemplate.form.label.desc"
        >
          workflowTemplate.form.label.desc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input textarea-no-resize"
              id="desc"
              placeholder="common.form.placeholder.input"
              rows="3"
            >
              desc1
            </textarea>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="instanceNameList"
          title="workflowTemplate.form.label.instanceNameList"
        >
          workflowTemplate.form.label.instanceNameList
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item"
                    style="opacity: 1;"
                  >
                    <span
                      class="ant-select-selection-item"
                    >
                      <span
                        class="ant-select-selection-item-content"
                      >
                        name1
                      </span>
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-item-remove"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="close"
                          class="anticon anticon-close"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="instanceNameList_list_0"
                        aria-autocomplete="list"
                        aria-controls="instanceNameList_list"
                        aria-haspopup="listbox"
                        aria-owns="instanceNameList_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instanceNameList"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-no-colon"
          title=" "
        >
           
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    common.reset
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    common.nextStep
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`WorkflowTemplateForm should reset all fields when user click rest button 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-required"
          for="name"
          title="workflowTemplate.form.label.name"
        >
          workflowTemplate.form.label.name
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="name"
              placeholder="common.form.placeholder.input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="desc"
          title="workflowTemplate.form.label.desc"
        >
          workflowTemplate.form.label.desc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input textarea-no-resize"
              id="desc"
              placeholder="common.form.placeholder.input"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="instanceNameList"
          title="workflowTemplate.form.label.instanceNameList"
        >
          workflowTemplate.form.label.instanceNameList
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="instanceNameList_list_0"
                        aria-autocomplete="list"
                        aria-controls="instanceNameList_list"
                        aria-haspopup="listbox"
                        aria-owns="instanceNameList_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instanceNameList"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-no-colon"
          title=" "
        >
           
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  ant-click-animating-without-extra-node="false"
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    common.reset
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    common.nextStep
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
